styles/Index.module.scss
.container {
  display: grid;
  grid-template-columns: 1fr auto;
  gap: 5rem;
}

.articles,
.right {
  display: grid;
  grid-auto-flow: row;
  gap: 1.5rem;
}

.networks {
  display: flex;
  gap: 2em;
}

.links {
  display: flex;
  flex-direction: column;
  gap: 0.5em;
}

